# MERIDIAN

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default_eval.yaml
src/: __init__.py
src/evaluation/: __init__.py  scorer.py
src/metrics/: __init__.py  clinhall.py  clinical_calibration.py  drift_risk.py  equity_gap.py  reasoning_coherence.py  regulatory_readiness.py  safety_audit.py
tests/: test_metrics.py
