[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "meridian-health-eval"
version = "0.1.0"
description = "Medical Evaluation and Reasoning Intelligence: Diagnostics, Integrity, and Accountability Network"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["healthcare", "AI evaluation", "clinical AI", "medical AI", "LLM evaluation", "patient safety", "health equity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12",
    "httpx>=0.27",
    "openai>=1.30",
    "anthropic>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
]
nlp = [
    "transformers>=4.40",
    "sentence-transformers>=3.0",
    "spacy>=3.7",
]

[project.scripts]
meridian = "meridian.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
